@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020040621"
+#define public MagickPackageVersionAddendum ".020040627"
 #define public MagickPackageReleaseDate "unreleased"
