@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2004-06-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (MogrifyImage): When setting image units, also
+        adjust existing image x_resolution and y_resolution so that
+        existing image resolution is not trashed.
+
+</UL>
+<p>
 2004-06-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
