@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020908;16044300">
 	<META NAME="CHANGEDBY" CONTENT="Robert Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20040612;21022200">
+	<META NAME="CHANGED" CONTENT="20040626;10113900">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
 	<STYLE>
@@ -73,11 +73,11 @@ browser.
 	</TR>
 </TABLE>
 <P STYLE="margin-bottom: 0in">Here is a summary of CVS commands. See
-the <A HREF="http://www.cvshome.org/">CVS Home Page</A> for detailed
-information and documentation about CVS. The command &quot;cvs
-&ndash;help-commands&quot; will print out all of the available
-commands. The command &quot;cvs <I>command</I> &ndash;help&quot; will
-cause a help message to be printed for the specified &quot;<I>command</I>&quot;.</P>
+the <A HREF="http://www.cvshome.org/" TARGET="_top">CVS Home Page</A>
+for detailed information and documentation about CVS. The command
+&quot;cvs &ndash;help-commands&quot; will print out all of the
+available commands. The command &quot;cvs <I>command</I> &ndash;help&quot;
+will cause a help message to be printed for the specified &quot;<I>command</I>&quot;.</P>
 <CENTER>
 	<TABLE WIDTH=96% BORDER=1 BORDERCOLOR="#000000" CELLPADDING=4 CELLSPACING=0 BGCOLOR="#99ccff">
 		<COL WIDTH=30*>
@@ -205,7 +205,7 @@ cause a help message to be printed for the specified &quot;<I>command</I>&quot;.
 </TABLE>
 <P>A live source tree for GraphicsMagick is available from
 <TT>cvs.graphicsmagick.org</TT>. This source tree may be retrieved
-over the network using the <A HREF="http://www.cvshome.org/">CVS
+over the network using the <A HREF="http://www.cvshome.org/" TARGET="_top">CVS
 program</A>. There are currently two CVS protocols available for use:
 'EXT' and 'PSERVER'. The 'EXT' protocol is used on top of encrypted
 SSH so it is very secure. The 'PSERVER' protocol uses simple TCP and
@@ -262,7 +262,7 @@ table.</P>
 <PRE STYLE="margin-bottom: 0.2in"> cvs -d :pserver:anonymous@cvs.graphicsmagick.org:/GraphicsMagick command args...</PRE><P>
 <FONT SIZE=3>Or to set as an environment variable:</FONT></P>
 <P><FONT SIZE=3>export
-CVSROOT=<SPAN STYLE="text-decoration: none"><SPAN STYLE="font-weight: medium"><SPAN STYLE="font-style: normal"><FONT FACE="Verdana, Arial, Helvetica, sans-serif">:ext:anoncvs@cvs.graphicsmagick.org:/GraphicsMagick</FONT></SPAN></SPAN></SPAN></FONT></P>
+CVSROOT=<SPAN STYLE="text-decoration: none">:ext:anoncvs@cvs.graphicsmagick.org:/GraphicsMagick</SPAN></FONT></P>
 <P STYLE="font-style: normal; font-weight: medium; text-decoration: none">
 <FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>setenv
 CVSROOT :ext:anoncvs@cvs.graphicsmagick.org:/GraphicsMagick</FONT></FONT></P>
@@ -380,9 +380,9 @@ don't compress the data much more.</P>
 	</TR>
 </TABLE>
 <P STYLE="margin-bottom: 0in">The best place to look for the latest
-version of CVS is at the <A HREF="http://www.cvshome.org/">CVS Home
-Page </A>. There is also a lot of information and documentation about
-CVS available. 
+version of CVS is at the <A HREF="http://www.cvshome.org/" TARGET="_top">CVS
+Home Page </A>. There is also a lot of information and documentation
+about CVS available. 
 </P>
 <HR>
 <P ALIGN=CENTER><A HREF="Copyright.html">Copyright</A> <FONT FACE="Abadi Mt Condensed Extra Bold">&copy;</FONT>
