@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020718;12063600">
 	<META NAME="CHANGEDBY" CONTENT="Robert Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20040418;19193000">
+	<META NAME="CHANGED" CONTENT="20040626;10174200">
 	<META NAME="CLASSIFICATION" CONTENT="Describes GraphicsMagick features which are peculiar to Microsoft Windows">
 	<META NAME="DESCRIPTION" CONTENT="Describes how to install GraphicsMagick for Windows.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, WebMagick, Web Magic, visualization, image processing, software development, image, software, Magick++">
@@ -30,8 +30,8 @@ style installation wizard under Microsoft Windows. It applies only to
 the pre-built &quot;binaries&quot; package, and not to versions
 compiled from source code. If you would like to install
 GraphicsMagick from source code, then please refer to the
-<A HREF="INSTALL-windows.html">GraphicsMagick installation guide</A>
-. </I>
+<A HREF="INSTALL-windows.html">GraphicsMagick installation guide for
+Windows</A> . </I>
 </BLOCKQUOTE>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=0>
 	<COL WIDTH=256*>
@@ -48,8 +48,8 @@ installed at one time, if your intention is to replace a prior
 installation of GraphicsMagick with a newer version, then it may be
 wise to uninstall the existing GraphicsMagick (see uninstall
 procedure) prior to installing the newer version.<BR><BR>While it is
-not a requirement, it is strongly recommended that the <A HREF="http://www.cs.wisc.edu/~ghost/">Ghostscript</A>
-package (version 7.05 preferred since it has the least bugs) be
+not a requirement, it is strongly recommended that the <A HREF="http://www.cs.wisc.edu/~ghost/" TARGET="_top">Ghostscript</A>
+package (version 7.07 preferred since it has the least bugs) be
 installed. GraphicsMagick uses Ghostscript to render Postscript and
 PDF files, as well as formats where a translator to Postscript is
 available. GraphicsMagick will also use the fonts delivered with
@@ -57,7 +57,7 @@ Ghostscript to support the standard set of Adobe Postscript fonts
 like &quot;Helvetica&quot; and &quot;Times Roman&quot;. <BR><BR>The
 installation package includes the GraphicsMagick Perl extension (
 <A HREF="perl.html">PerlMagick</A>) as an installation option. If you
-would like to use this extension, then you must install <A HREF="http://www.activestate.com/Products/ActivePerl/Download.html">ActiveState
+would like to use this extension, then you must install <A HREF="http://www.activestate.com/Products/ActivePerl/Download.html" TARGET="_top">ActiveState
 ActivePerl</A> prior to commencing with installation of
 GraphicsMagick. 
 </P>
@@ -199,7 +199,7 @@ a window.</P>
 		</TD>
 	</TR>
 </TABLE>
-<P CLASS="western">[ The following is transcribed from the <A HREF="http://www.jrsoftware.org/isinfo.php">Inno
+<P CLASS="western">[ The following is transcribed from the <A HREF="http://www.jrsoftware.org/isinfo.php" TARGET="_top">Inno
 Setup</A> documentation. Inno Setup is used to create the binary
 install package. This information may be of value if the
 GraphicsMagick installation must be automated (e.g. If it is
@@ -336,11 +336,11 @@ as delivered:</P>
 	<COL WIDTH=170*>
 	<TR VALIGN=TOP>
 		<TD WIDTH=34% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
 			Name</SPAN></B></FONT></FONT></P>
 		</TD>
 		<TD WIDTH=66% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
 			Type</SPAN></B></FONT></FONT></P>
 		</TD>
 	</TR>
@@ -402,15 +402,15 @@ These entries are available under the registry path
 	<COL WIDTH=121*>
 	<TR VALIGN=TOP>
 		<TD WIDTH=34% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
 			Name</SPAN></B></FONT></FONT></P>
 		</TD>
 		<TD WIDTH=19% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Key
 			Type</SPAN></B></FONT></FONT></P>
 		</TD>
 		<TD WIDTH=47% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Description</SPAN></B></FONT></FONT></P>
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B><SPAN STYLE="background: transparent">Description</SPAN></B></FONT></FONT></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
@@ -518,15 +518,13 @@ entries.</P>
 	<COL WIDTH=138*>
 	<TR VALIGN=TOP>
 		<TD WIDTH=27% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B>Key
-			Name</B></FONT></FONT></P>
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B>Key Name</B></FONT></FONT></P>
 		</TD>
 		<TD WIDTH=20% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B>Key
-			Type</B></FONT></FONT></P>
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B>Key Type</B></FONT></FONT></P>
 		</TD>
 		<TD WIDTH=54% BGCOLOR="#52799e">
-			<P CLASS="western" STYLE="color: #ffffff"><FONT COLOR="#ffffff"><FONT SIZE=3><B>Description</B></FONT></FONT></P>
+			<P CLASS="western"><FONT COLOR="#ffffff"><FONT SIZE=3><B>Description</B></FONT></FONT></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
