@@ -1,3 +1,9 @@
+2004-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/command.c (MogrifyImage): When setting image units, also
+	adjust existing image x_resolution and y_resolution so that
+	existing image resolution is not trashed.
+
 2004-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/pcx.c (WritePCXImage): Support writing large PCX files.
